[workspace]
resolver = "2"

members = [
    "arceos-vmm",
    "crates/arceos",
    "crates/axaddrspace",
    "crates/axdevice",
    "crates/axdevice_crates",
    "crates/axvcpu",
    "crates/axvm",
    "crates/x86_vcpu"
]


[profile.release]
lto = true

[workspace.dependencies]
axstd = { git = "https://github.com/arceos-hypervisor/arceos.git", branch = "vmm" }

axvm = { path = "crates/axvm" }
axvcpu = { path = "crates/axvcpu" }
axaddrspace = { path = "crates/axaddrspace" }
